more java11 fixes